// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImgDynamic does not render image off screen 1`] = `
.c0> img {
  -webkit-animation: cJoqxJ ease 2s;
  animation: cJoqxJ ease 2s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  z-index: -1;
}

<div>
  <div
    class="c0"
  >
    <div>
      loading
    </div>
  </div>
</div>
`;

exports[`ImgDynamic renders image correctly 1`] = `
.c0> img {
  -webkit-animation: cJoqxJ ease 2s;
  animation: cJoqxJ ease 2s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  z-index: -1;
}

<div>
  <div
    class="c0"
  >
    <img
      height="200"
      id="imgId"
      src="data:image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7"
      width="200"
    />
  </div>
</div>
`;
